# benchmark

./: .gitignore  README.md  consolidate_data.py  dev.ipynb  question_types.json  run_benchmark.py  test_report_gen.py  update_log.txt  update_question_types.py
data/: set_1_1.json  set_1_2.json  set_1_3.json  set_1_4.json  set_1_5.json  set_1_6.json  set_1_7.json  set_1_8.json
data/set 1/: 1.json  2.json  3.json  4.json  5.json  6.json  8.json  structure.json
data/set 2/: 1.json  structure.json
data/set 3/: structure.json
data/set 4/: 2.json
fonix_ocr_bench_pkg/: .gitignore  GUIDE.md  LICENSE  MANIFEST.in  pyproject.toml  setup.py
fonix_ocr_bench_pkg/fonix_ocr_bench/: __init__.py  cli.py  dataset.py  evaluation.py  gemini3_model.py  gemini_model.py  logger.py  model_interface.py  refinement.py  report_generator.py  runner.py  utils.py
results_all/20260219_163018/: report.html  set_10_10_result.json  set_10_1_result.json  set_10_2_error.txt  set_10_3_result.json  set_10_4_result.json  set_10_5_result.json  set_10_6_result.json  set_10_7_result.json  set_10_8_result.json  set_10_9_result.json  set_13_1_result.json  set_13_2_result.json  set_13_3_result.json  set_13_4_result.json  set_13_5_result.json  set_13_6_result.json  set_1_1_result.json  set_1_2_result.json  set_1_3_result.json  set_1_4_result.json  set_1_5_result.json  set_1_6_result.json  set_1_7_result.json  set_1_8_result.json  set_2_1_result.json  set_2_2_result.json  set_2_3_result.json  set_2_4_result.json  set_2_5_result.json  set_2_6_result.json  set_2_7_result.json  set_2_8_result.json  set_2_9_result.json  set_4_1_result.json  set_4_2_result.json  set_4_3_result.json  (+12 more)
test_results/: report.html
(+271 files in other folders)
