[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fonix-ocr-bench"
version = "0.1.0"
description = "A Python package for benchmarking OCR models on handwritten text"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["ocr", "benchmark", "handwriting", "gemini", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "google-genai>=0.1.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/fonix-ocr-bench"
Documentation = "https://github.com/yourusername/fonix-ocr-bench#readme"
Repository = "https://github.com/yourusername/fonix-ocr-bench"
Issues = "https://github.com/yourusername/fonix-ocr-bench/issues"

[project.scripts]
fonix-ocr-bench = "fonix_ocr_bench.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fonix_ocr_bench*"]
exclude = ["tests*", "data*", "results*"]
